welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:7: error: type mismatch;
 found   : Unit
 required: Int
    }else if (86<=speed){
          ^caughtSpeeding:15: error: type mismatch;
 found   : Unit
 required: Int
    }else if (81<=speed){
          ^